--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:name="com.example.quiz.Settings"
             android:label="@string/title_activity_settings" >
         </activity>
+        <activity
+            android:name="com.example.quiz.User_landing"
+            android:label="@string/title_activity_user_landing" >
+        </activity>
     </application>
 
 </manifest>
