--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,4 +84,6 @@
         </activity>
     </application>
 
+     <uses-permission android:name="android.permission.INTERNET"></uses-permission>    
+    
 </manifest>
