--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
-	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-     
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -85,6 +85,12 @@
             android:name="com.example.quiz.User_import"
             android:label="@string/title_activity_user_import" >
         </activity>
+        <activity
+            android:name="com.example.quiz.FullscreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_fullscreen"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
     </application>
-     
+
 </manifest>
