The list of files in the server to download from has been created. It is called from the user base page.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -99,6 +99,10 @@
             android:name="com.example.quiz.FilePickerActivity"
             android:label="@string/title_activity_filepicker" >
         </activity>
+        <activity
+            android:name="com.example.quiz.DBList"
+            android:label="@string/title_activity_dblist" >
+        </activity>
     </application>
 
 </manifest>
